--- a/ProyectoMedicina/src/VerificarCitas/VerificarCitas.form
+++ b/ProyectoMedicina/src/VerificarCitas/VerificarCitas.form
@@ -30,7 +30,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="6419c" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="6419c" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -42,7 +42,7 @@
         <children>
           <component id="2e049" class="javax.swing.JButton" binding="BTNLimpiar">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Limpiar"/>
@@ -56,17 +56,9 @@
               <text value="Buscar"/>
             </properties>
           </component>
-          <component id="8f553" class="javax.swing.JButton" binding="btnNuevo">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="agregar"/>
-            </properties>
-          </component>
           <component id="e23fd" class="javax.swing.JButton" binding="BTNCancelar">
             <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Cancelar"/>
@@ -80,7 +72,7 @@
         </constraints>
         <properties>
           <foreground color="-15592942"/>
-          <text value="Matricula Doctor: "/>
+          <text value="Matricula Paciente: "/>
         </properties>
       </component>
       <component id="b77f9" class="javax.swing.JComboBox" binding="CMBIdPaciente">
